fix top banner on mobile and add start background pattern

--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -21,4 +21,8 @@
 
 .main-header {
   background: $neutral-10;
+
+  @include media-breakpoint-up(xl) {
+    background: url('/img/stars-pattern.png') $neutral-10;
+  }
 }
